welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: ')' expected but ';' found.
if (estSurBiscuit();) {nbBiscuit=nbBiscuit+1} 
                   ^RunFour:3: error: illegal start of statement
if (estSurBiscuit();) {nbBiscuit=nbBiscuit+1} 
                    ^