welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit: Int=0
if (estSurBiscuit();) {nbBiscuit=nbBiscuit+1}